# xa-ursa-minor

./: Cargo.toml  package-lock.json  package.json
.github/workflows/: build-and-release.yaml  release-plugin.yaml
src/: App.css  App.tsx  flight_loop.rs  lib.rs  main.scss  main.tsx  plugin.rs  vibration.rs
src-hid/: Cargo.toml  tauri.conf.json
src-hid/src/: hid.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: hid.rs  lib.rs  main.rs
src-xplane/: Cargo.toml  Makefile
src-xplane/src/: lib.rs  logger.rs  plugin.rs  vibration.rs
src/components/: UrsaMinorInfo.tsx  VibrationProfile.tsx
