# Cargo.toml
[package]
name = "xa-ursa-minor-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
xplm = { git = "https://github.com/samcrow/rust-xplm", branch = "master" }
xplm-sys = "0.5.1"
xa-ursa-minor-hid = { path = "../src-hid" }

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib"]
bench = false